Removed unnecessary stubs, updated service provider to create repo on boot instead of on register

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         {
             "name": "Shea Lewis",
             "email": "shea.lewis89@gmail.com"
+        },
+        {
+            "name": "Matthew Weir",
+            "email": "mweir@sitelock.com"
         }
     ],
     "require": {
